Change applicant_name to application_name and correct spacing

--- a/src/styles/components/MajorDevelopmentDashboard.scss
+++ b/src/styles/components/MajorDevelopmentDashboard.scss
@@ -6,7 +6,7 @@
 #majorDevDash section {
   display: block;
   width: inherit;
-  min-height: 70vh;
+  min-height: 60vh;
   margin: 0 auto;
   padding: 0;
   margin-top: -140px;
@@ -21,7 +21,7 @@
   z-index: 99;
   position: fixed;
   background-color: #fff;
-  border-right: 1px solid #f2f2f2;
+  border-right: 1px solid #e7eaff;
   top: 97px;
   padding: 0;
 }
